@@ -1,6 +1,7 @@
 jalv (1.4.7) unstable;
 
   * Improve preset support
+  * Support numeric plugin properties (event-based control)
   * Add generic Qt control UI from Amadeus Folego
   * Set Jack port order metadata
   * Allow Jack client name to be set from command line (thanks Adam Avramov)
@@ -12,7 +13,7 @@ jalv (1.4.7) unstable;
   * Use moc-qt4 if present for systems with multiple Qt versions
   * Add Qt5 version
 
- -- David Robillard <d@drobilla.net>  Fri, 09 Oct 2015 18:00:22 -0400
+ -- David Robillard <d@drobilla.net>  Fri, 09 Oct 2015 22:58:33 -0400
 
 jalv (1.4.6) stable;
 
